test/trivial/deitz/test_var_decl_strange4.good
Error: Variable 'x' used before it is defined (test_var_decl_strange4.chpl:4)

